# dep-sys-rs

./: Cargo.toml  README.md  abc.dot  chicken.dot
src/: main.rs
