[package]
name = "dep-sys-rs"
version = "0.1.0"
edition = "2021"
description = "A command-line utility to detect circular depedencies with Graphviz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "color", "suggestions"] }
derive_more = "0.99.17"
dot-structures = "0.1.1"
graphviz-rust = "0.7.0"
